syntax = "proto3";

package tds.click;

service ClickService {
  rpc AddClick(AddClickRequest) returns (AddClickResponse);
}


message AddClickRequest {
  string campaignCode = 1;
}

message AddClickResponse {
  string message = 1;
}
